everything working with H2